--- a/Proyecto5ObjetoEnMovimiento/ObjetoEnMovimiento/src/style.css
+++ b/Proyecto5ObjetoEnMovimiento/ObjetoEnMovimiento/src/style.css
@@ -38,3 +38,8 @@ body {
     display: flex;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
+.esqueletoOnOff:hover {
+    background-color: rgb(19, 40, 110);
+    cursor: pointer;
+}
