--- a/Proyecto5ObjetoEnMovimiento/ObjetoEnMovimiento/src/style.css
+++ b/Proyecto5ObjetoEnMovimiento/ObjetoEnMovimiento/src/style.css
@@ -40,6 +40,7 @@ body {
 }
 
 .esqueletoOnOff:hover {
-    background-color: rgb(19, 40, 110);
+    background: rgb(63, 94, 251);
+    background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%);
     cursor: pointer;
 }
